--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
             </div>
         </div>
 
+        <script src="snow.js"></script>
+        
         <FontAwesome script -->
             <script src="https://kit.fontawesome.com/6f8f3d395c.js" crossorigin="anonymous"></script>
 
