--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                 <div class="winner-modal" style=>
                     <div class="modal-content">
                         <span class="close"><i class="fas fa-times-circle"></i></span>
-                        <h3 class="modal-header"></h3>
-                        <p class="modal-result"></p>
+                        <h3 class="modal-answer"></h3>
+                        <p class="modal-display"></p>
                     </div>
                 </div>
 
@@ -152,6 +152,7 @@
         </div>
 
         <!-- <button class="btn" id="myBtn">Rules of Play</button> -->
+        <!-- <i class="fas fa-times-circle"></i> -->
 
         <!-- The Modal -->
         <div id="myModal" class="modal">
