--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="winner-modal" style=>
                     <div class="modal-content">
                         <span class="close"><i class="fas fa-times-circle"></i></span>
-                        <h3 class="modal-header"></h3>
+                        <h3 class="modal-answer"></h3>
                         <p class="modal-result"></p>
                     </div>
                 </div>
