--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Festive&family=Mountains+of+Christmas:wght@700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title></title>
+    <title>Rock, Paper, Scissors, Lizard, Spock, Game</title>
 </head>
 
 <body>
 
     <div class="background">
-        <div id="background" alt="christmas-trees"></div>
+        <div id="background"></div>
     </div>
 
     <div class="foreground">
@@ -67,7 +67,7 @@
 
                 <!--track -->
 
-                <div class="winner-modal" style=>
+                <div class="winner-modal" style="">
                     <div class="modal-content">
                         <span class="close"><i class="fas fa-times-circle"></i></span>
                         <h3 class="modal-answer"></h3>
@@ -81,7 +81,7 @@
         </div>
 
 
-        <div class="win" style="display-block">
+        <div class="win" style="">
             <div class="round-results">
                 <span id="round-text">Computer Wins the Round!</span>
             </div>
