--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
         </div>
 
-        <FontAwesome>
+        <!-- FontAwesome -->
             <script src="https://kit.fontawesome.com/6f8f3d395c.js" crossorigin="anonymous"></script>
 
 
@@ -143,7 +143,7 @@
         <source src="assets/music/christmas-magic-night-11648.mp3" type="audio/mpeg"></i> -->
 
 
-        <audio controls>
+        <audio controls="loop">
             <source src="assets/music/christmas-magic-night-11648.mp3" type="audio/mpeg">
         </audio>
     
