--- a/index.html
+++ b/index.html
@@ -1,55 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
-    <title>test</title>
-    <style type="text/css">
-      h3 {
-        text-align: center;
-      }
-
-      /* PRINT VERSION */
-      @media print {
-        h3:after {
-          content: ' - PRINT';
-          display: inline;
-        }
-      }
-      /* PHONE VERSION */
-      @media only screen and (min-width: 320px) {
-        h3:after {
-          content: ' - PHONE';
-          display: inline;
-        }
-      }
-      /* TABLET VERSION */
-      @media only screen and (min-width: 768px) {
-        h3:after {
-          content: ' - TABLET';
-          display: inline;
-        }
-      }
-      /* DESKTOP VERSION */
-      @media only screen and (min-width: 980px) {
-        h3:after {
-          content: ' - DESKTOP';
-          display: inline;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <h3>TEST</h3>
-  </body>
-</html> -->
-
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -58,46 +6,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="Play a fun game of Rock Paper Scissors Lizard Spock. Win against the computer by being the first to reach 7 points.">
-  <meta name="keywords" content="Rock, Paper, Scissors, Lizard, Spock, Game, JavaScript ">
-  <meta name="author" content="Bell">
-
+  <meta name="keywords" content="Rock, Paper, Scissors, Lizard, Spock, Game, JavaScript, Play, Fun ">
+  <meta name="author" content="BellSmith">
   <!-- Font Awesome and Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Festive&display=swap" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css2?family=Festive&family=Mountains+of+Christmas:wght@700&display=swap"
     rel="stylesheet">
-
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Rock, Paper, Scissors, Lizard, Spock, Game</title>
 </head>
 
 <body>
-
-
-
   <div class="background">
     <div id="background"></div>
   </div>
-
   <div class="foreground">
-
     <header>
-
-    <h1 class="heading">
-      Xmas Rock-Paper-Scissors-Lizard-Spock Game
-    </h1></header>
-
+      <h1 class="heading">
+        Xmas Rock-Paper-Scissors-Lizard-Spock Game
+      </h1>
+    </header>
     <div class="rules-btn">
       <button class="btn" id="myBtn">Rules of Play</button>
     </div>
 
     <div id="game-screen" style="">
       <div class="game-area">
-
-
         <div class="scoreboards">
-
           <div class="player-scoreboard">
             <h1>Player's Score is:</h1>
             <p class="score"><span class="score"> 0 </span></p>
@@ -110,32 +46,25 @@
               <i id="spock" class="far fa-hand-spock choice"></i>
             </div>
           </div>
-
           <div class="computer-scoreboard">
             <h1>Computer's Score is:</h1>
             <p class="score"><span class="comp-score"> 0 </span></p>
             <p>Computer chooses ...</p>
             <i id="computer-icon" class="far fa-hand-spock"></i>
           </div>
-
         </div>
-
 
         <!--track -->
 
         <div class="winner-modal" style="">
           <div class="modal-content">
-            <span class="close"><i class="fas fa-times-circle"></i></span>
+            <span class="close">&times;</span>
             <h3 class="modal-answer"></h3>
             <p class="modal-result"></p>
           </div>
         </div>
-
-
-
       </div>
     </div>
-
 
     <div class="win" style="">
       <div class="round-results">
@@ -165,24 +94,18 @@
 
     <div id="myModal" class="modal">
       <div class="modal-content">
-        <span class="close"></span>
+        <span class="shut">&times;</span>
         <h1>How to Play the Game</h1>
         <p>Choose the shape of hand that you want to play against the Computer. Click on the image you want
-          to to start the game.
+          to start the game.
           Remember choose wisely it is best of '7' go's for you to beat the Computer.</p>
       </div>
     </div>
-
     <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/6f8f3d395c.js" crossorigin="anonymous"></script>
-
-
     <script src="assets/jss/script.js"></script>
-
   </div>
-
   <footer></footer>
-
 </body>
 
 </html>
