--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </p>
     </div>
 
-    <audio src="assets/music/christmas-magic-night-11648.mp3" type="audio/mpeg" controls loop>Your browser does not
+    <audio src="assets/music/christmas-magic-night-11648.mp3" controls loop>Your browser does not
       support the HTML5 Audio element.</audio>
 
     <div id="myModal" class="modal">
